优化和修复了单例实例的内容

--- a/source/_posts/单例模式的7种写法.md
+++ b/source/_posts/单例模式的7种写法.md
@@ -8,7 +8,7 @@ categories:
 - 编程语言
 ---
 
-> 文章转自公众号[无敌码农 | 谁要是再问你单例模式，那就抛给他这7种写法吧！](https://mp.weixin.qq.com/s/zXhvdF9inUDkqwCrrBt_Cg) 
+> 文章转自公众号[无敌码农 | 谁要是再问你单例模式，那就抛给他这7种写法吧！](https://mp.weixin.qq.com/s/zXhvdF9inUDkqwCrrBt_Cg)
 
 单例设计模式是23种设计模式中，最基础也是最常用的设计模式之一，也是面试中关于设计模式知识点考察比较高频的问题之一。说起单例模式的写法，大多数情况下出现在我们脑海中的可能就是“饿汉式”，“懒汉式”这两种写法，但是今天小码哥今天要介绍的是单例模式的7种写法，以后面试官要是再问你单例模式，那就抛给他这七种写法吧！
 
@@ -42,7 +42,7 @@ public final class SingleTonEhangshi {
 
 饿汉式的实现关键在于instance作为类变量直接得到了初始化，如果我们主动使用SingleToEhangshi类，那么instance实例将会直接完成创建，包括其中的实例变量也都会得到初始化。
 
-instance作为类变量，在类初始化的过程中会被收集进<clinit>()方法中，而该方法是可以100%地保证同步，也就是说instance在多线程的情况下不可能被初始化两次。但是由于instance被ClassLoader加载后很长一段时间才被使用的话，那就会意味着instance实例所开辟的堆内存会驻留很长的时间。
+instance作为类变量，在类初始化的过程中会被收集进<clinit\>()方法中，而该方法是可以100%地保证同步，也就是说instance在多线程的情况下不可能被初始化两次。但是由于instance被ClassLoader加载后很长一段时间才被使用的话，那就会意味着instance实例所开辟的堆内存会驻留很长的时间。
 
 总体说来，如果一个类中的成员变量比较少，且占用的内存资源也不多，用饿汉式的方式实现单例模式也未尝不可，只是其无法进行懒加载。
 
@@ -81,7 +81,7 @@ public final class SingleTonLhangshi {
 
 懒汉式的单例实现方式可以保证实例的懒加载，但是却无法保证实例的唯一性。在多线程环境下由于instance为共享数据，当多个线程访问使用时，需要保证数据的同步性，所以如果需要保证懒汉式实例的唯一性，我们可以通过同步的方式来实现。代码如下：
 ```Java
-/final不允许被继承
+//final不允许被继承
 public final class SingleTonLhangshiSync {
     //实例变量
     private byte[] data = new byte[1024];
@@ -122,7 +122,7 @@ public final class SingletonDoubleCheck {
     Socket socket;
 
     //私有化构造函数，不允许外部NEW
-    private SingletonDoubleCheck() {
+    private SingletonDoubleCheck(Connection con, Socket socket) {
         this.con = con;//初始化
         this.socket = socket;//初始化
 
@@ -163,7 +163,7 @@ public final class SingletonDoubleCheck {
     Socket socket;
 
     //私有化构造函数，不允许外部NEW
-    private SingletonDoubleCheck() {
+    private SingletonDoubleCheck(Connection con, Socket socket) {
         this.con = con;//初始化
         this.socket = socket;//初始化
 
@@ -212,7 +212,7 @@ public final class SingletonHolder {
 
 在单例类中并没有instance的静态成员，而是将其放到了静态内部类Holder之中，因此单例类在初始化的过程中并不会创建SingletonHolder的实例，内部类Holder中定义了SingletonHolder的静态变量，并且直接进行了实例化，只有当Holder被主动引用的时候才会创建SingletonHolder的实例。
 
-SingletonHolder实例的创建过程在Java程序编译时期收集至<clinit>()方法中，该方法又是同步方法，可以保证内存的可见性、JVM指令的顺序性和原子性。Holder方式的单例模式设计是最好的设计之一，也是目前使用比较广的设计。
+SingletonHolder实例的创建过程在Java程序编译时期收集至<clinit\>()方法中，该方法又是同步方法，可以保证内存的可见性、JVM指令的顺序性和原子性。Holder方式的单例模式设计是最好的设计之一，也是目前使用比较广的设计。
 
 ### 枚举方式
 
