新增两篇mysql的文章，以及优化其他文章标签与分类

--- a/source/_posts/单例模式的7种写法.md
+++ b/source/_posts/单例模式的7种写法.md
@@ -2,10 +2,11 @@
 title: 单例模式的7种写法
 date: 2019-04-28 16:28:57
 tags:
-- Java
-- 单例模式
+    - Java
+    - 单例模式
+    - 设计模式
 categories:
-- 编程语言
+    - 编程语言
 ---
 
 > 文章转自公众号[无敌码农 | 谁要是再问你单例模式，那就抛给他这7种写法吧！](https://mp.weixin.qq.com/s/zXhvdF9inUDkqwCrrBt_Cg)
