补充异常和设计模式

--- a/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
+++ b/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
@@ -2,12 +2,16 @@
 title: 程序猿三部曲之青铜时代
 date: 2023-03-14 15:49:34
 tags:
-	- Ioc
-	- AOP
+	- Ioc和AOP
 	- 反射
 	- 动态代理
+	- 异常
+	- 索引
+	- Redis
+	- 缓存
 categories:
 	- 代码人生
+toc: true
 ---
 
 
@@ -268,6 +272,95 @@ Redis 集群可以实现数据分片服务，也就是说在 Redis 集群中有 
 
 
 参考资料：[实现 Java 本地缓存，该从这几点开始](https://zhuanlan.zhihu.com/p/82074159)
+
+
+# 8 Exception和Error的区别
+
+Exception和Error都继承了Throwable类。
+
+Exception 是程序正常运行中，可以预料的意外情况，可能并且应该被捕获，进行相应处理；Error 是指在正常情况下，不大可能出现的情况，绝大部分的 Error 都会导致程序（比如 JVM 自身）处于非正常的、不可恢复状态
+
+{% asset_img ErrorVsException.png %}
+
+Exception 又分为cheked exception（检查异常） 和 unchecked exception（不检查异常）。
+
+checked exception 指的是在源代码里必须处理的异常。例如：
+
+- IOException
+
+unchecked exception 指的是不用在源代码里处理，为运行时异常。例如：
+
+- NullPointerException
+- ClassCastException
+
+
+绝大数的Error会导致程序处于非正常状态。例如：
+
+- NoClassDefFoundError
+- OutOfMemoryError
+- StackOverflowError
+
+参考资料：
+[《谈谈你对Exception 和 Error的理解》](https://cloud.tencent.com/developer/article/1851847)
+[《Exception和Error有什么区别吗》](https://cloud.tencent.com/developer/article/2177926)
+
+
+# 9 设计模式
+
+23种经典设计模式，设计模式的具逻辑和实现，可移步[菜鸟教程](https://www.runoob.com/design-pattern/design-pattern-tutorial.html)了解。
+
+## 9.1 创建型模式
+
+这些设计模式提供了一种在创建对象的同时隐藏创建逻辑的方式，而不是使用 new 运算符直接实例化对象。这使得程序在判断针对某个给定实例需要创建哪些对象时更加灵活。	
+
+- 工厂模式（Factory Pattern）
+- 抽象工厂模式（Abstract Factory Pattern）
+- 单例模式（Singleton Pattern）
+- 建造者模式（Builder Pattern）
+- 原型模式（Prototype Pattern）
+
+## 9.2 结构型模式
+
+这些设计模式关注类和对象的组合。继承的概念被用来组合接口和定义组合对象获得新功能的方式。	
+
+- 适配器模式（Adapter Pattern）
+- 桥接模式（Bridge Pattern）
+- 过滤器模式（Filter、Criteria Pattern）
+- 组合模式（Composite Pattern）
+- 装饰器模式（Decorator Pattern）
+- 外观模式（Facade Pattern）
+- 享元模式（Flyweight Pattern）
+- 代理模式（Proxy Pattern）
+
+## 9.3 行为型模式
+
+这些设计模式特别关注对象之间的通信。	
+
+- 责任链模式（Chain of Responsibility Pattern）
+- 命令模式（Command Pattern）
+- 解释器模式（Interpreter Pattern）
+- 迭代器模式（Iterator Pattern）
+- 中介者模式（Mediator Pattern）
+- 备忘录模式（Memento Pattern）
+- 观察者模式（Observer Pattern）
+- 状态模式（State Pattern）
+- 空对象模式（Null Object Pattern）
+- 策略模式（Strategy Pattern）
+- 模板模式（Template Pattern）
+- 访问者模式（Visitor Pattern）
+
+## 9.4 J2EE 模式
+
+这些设计模式特别关注表示层。这些模式是由 Sun Java Center 鉴定的。	
+
+- MVC 模式（MVC Pattern）
+- 业务代表模式（Business Delegate Pattern）
+- 组合实体模式（Composite Entity Pattern）
+- 数据访问对象模式（Data Access Object Pattern）
+- 前端控制器模式（Front Controller Pattern）
+- 拦截过滤器模式（Intercepting Filter Pattern）
+- 服务定位器模式（Service Locator Pattern）
+- 传输对象模式（Transfer Object Pattern）
 
 
 ---
