补充青铜时代

--- a/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
+++ b/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
@@ -9,6 +9,12 @@ tags:
 	- 索引
 	- Redis
 	- 缓存
+	- 设计模式
+	- Dubbo
+	- SpringCloud
+	- 序列化
+	- 线程
+	- RocketMQ
 categories:
 	- 代码人生
 toc: true
@@ -361,6 +367,293 @@ unchecked exception 指的是不用在源代码里处理，为运行时异常。
 - 拦截过滤器模式（Intercepting Filter Pattern）
 - 服务定位器模式（Service Locator Pattern）
 - 传输对象模式（Transfer Object Pattern）
+
+
+# 10 一个线程调用两次start()方法会发生什么？简单谈谈线程的几种状态
+
+## 10.1 调用两次start()
+
+Java的线程是不允许启动两次的，第二次调用必然会抛岀`IllegalThreadStateEXception`，这是一种运行时异常，多次调用 start 被认为是编程错误。
+
+## 10.2 线程的生命周期
+
+- 新建（NEW），表示线程被创建出来还没真正启动的状态，可以认为它是个Java内部状态。
+- 就绪（ RUNNABLE），表示该线程已经在WM中执行，当然由于执行需要计算资源，它可能是正在运行，也可能还在等待系统分配给它cpu片段，在就绪队列里面排队。
+- 运行（Running）在其他一些分析中，会额外区分一种状态 RUNNING，但是从 Java API的角度，并不能表示出来。
+- 阻塞（ BLOCKED），这个状态和我们前面两讲介绍的同步非常相关，阻塞表示线程在等待 Monitor lock。比如，线程试图通过synchronized去获取某个锁，但是其他线程已经独占了，那么当前线程就会处于阻塞状态。
+- 等待（ WAITING），表示正在等待其他线程釆取某些操作。一个常见的场景是类似生产者消费者模式，发现任务条件尚未满足，就让当前消费者线程等待（wait），另外的生产者线程去准备任务数据，然后通过类似 notify等动作，通知消费线程可以继续工作了。Thread join（也会令线程进入等待状态。
+- 计时等待（ TIMED_WAIT），其进入条件和等待状态类似，但是调用的是存在超时条件的方法，比如wait或join等方法的指定超时版本，如下面示例
+
+```java
+public final native void wait（long timeout） throws InterruptedException；
+```
+
+- 终止（ TERMINATED），不管是意外退出还是正常执行结束，线程已经完成使命，终止运行，也有人把这个状态叫作死亡在第二次调用 start()方法的时候，线程可能处于终止或者其他（非NEW）状态，但是不论如何，都是不可以再次启动的。
+
+参考资料：[https://cloud.tencent.com/developer/article/1625433](https://cloud.tencent.com/developer/article/1625433)
+
+
+# 11 RocketMQ
+
+RocketMQ是一个纯Java、分布式队列模型的消息中间件，具有高可用、高可靠、高实时、低延迟的特点。
+
+## 11.1 消息中间件的通用功能
+
+1. 业务解耦：这也是发布订阅的消息模型。生产者发送指令到MQ中，然后下游订阅这类指令的消费者会收到这个指令执行相应的逻辑，整个过程与具体业务无关，抽象成了一个发送指令，存储指令，消费指令的过程。
+2. 前端削峰：前端发起的请求在短时间内太多后端无法处理，可以堆积在MQ中，后端按照一定的顺序处理，秒杀系统就是这么实现的。
+
+## 11.2 RocketMQ的特点
+
+1. 亿级消息的堆积能力：单个队列中的百万级消息的累积容量。
+2. 高可用性
+3. 高可靠性
+4. 支持分布式事务消息
+5. 支持顺序消息：消息在Broker中是采用队列的FIFO模式存储的，也就是发送是顺序的，只要保证消费的顺序性即可。
+6. 支持消息过滤：建议采用消费者业务端的tag过滤。
+7. 支持定时消息和延迟消息
+
+
+## 11.3 RocketMQ消息模型
+
+### Message
+
+就是要传输的消息，一个消息必须有一个主题，一条消息也可以有一个可选的Tag（标签）和额外的键值对，可以用来设置一个业务的key，便于开发中在broker服务端查找消息。
+
+### Topic
+
+主题，是消息的第一级类型，每条消息都有一个主题，就像信件邮寄的地址一样。主题就是我们具体的业务，比如一个电商系统可以有订单消息，商品消息，采购消息，交易消息等。Topic和生产者和消费者的关系非常松散，生产者和Topic可以是1对多，多对1或者多对多，消费者也是这样。
+
+### Tag
+
+标签，是消息的第二级类型，可以作为某一类业务下面的二级业务区分，它的主要用途是在消费端的消息过滤。比如采购消息分为采购创建消息，采购审核消息，采购推送消息，采购入库消息，采购作废消息等，这些消息是同一Topic和不同的Tag，当消费端只需要采购入库消息时就可以用Tag来实现过滤，不是采购入库消息的tag就不处理。
+
+### Group
+
+组，可分为ProducerGroup生产者组合ConsumerGroup消费者组，一个组可以订阅多个Topic。一般来说，某一类相同业务的生产者和消费者放在一个组里。
+
+### Message Queue
+
+消息队列，一个Topic可以划分成多个消息队列。Topic只是个逻辑上的概念，消息队列是消息的物理管理单位，当发送消息的时候，Broker会轮询包含该Topic的所有消息队列，然后将消息发出去。有了消息队列，可以使得消息的存储可以分布式集群化，具有了水平的扩展能力。
+
+### offset
+
+是指消息队列中的offset，可以认为就是下标，消息队列可看做数组。offset是java long，64位，理论上100年不会溢出，所以可以认为消息队列是一个长度无限的数据结构。
+
+参考资料：[RocketMq面试题精选](https://zhuanlan.zhihu.com/p/521109575)
+
+
+# 12 RocketMQ和其他消息中间件的区别
+
+{% asset_img diff_mq.png %}
+
+# 13 序列化和反序列化
+
+## 13.1 什么是序列化和反序列化？
+
+序列化：就是将对象转化成字节序列的过程。
+
+反序列化：就是将字节序列转化成对象的过程。
+
+对象序列化成的字节序列会包含对象的类型信息、对象的数据等，说白了就是包含了描述这个对象的所有信息，能根据这些信息“复刻”出一个和原来一模一样的对象。
+
+## 13.2 为什么要序列化和反序列化？
+
+1. 持久化：对象是存储在JVM中的堆区的，但是如果JVM停止运行了，对象也不存在了。序列化可以将对象转化成字节序列，可以写进硬盘文件中实现持久化。在新开启的JVM中可以读取字节序列进行反序列化成对象。
+2. 网络传输：网络直接传输数据，但是无法直接传输对象，可在传输前序列化，传输完成后反序列化成对象。所以所有可在网络上传输的对象都必须是可序列化的。
+
+## 13.3 实现序列化和反序列化的方法
+
+Java为我们提供了对象序列化的机制，规定了要实现序列化对象的类要满足的条件和实现方法。
+
+1. 对于要序列化对象的类要去实现Serializable接口或者Externalizable接口。
+2. 实现方法：JDK提供的ObjectOutputStream和ObjectInputStream来实现序列化和反序列化。
+
+
+## 13.4 serialVersionUID的作用
+
+先讲述下序列化的过程：在进行序列化时，会把当前类的serialVersionUID写入到字节序列中（也会写入序列化的文件中），在反序列化时会将字节流中的serialVersionUID同本地对象中的serialVersionUID进行对比，一直的话进行反序列化，不一致则失败报错（报InvalidCastException异常）
+
+serialVersionUID的生成有三种方式（private static final long serialVersionUID= XXXL ）：
+
+1. 显式声明：默认的1L
+2. 显式声明：根据包名、类名、继承关系、非私有的方法和属性以及参数、返回值等诸多因素计算出的64位的hash值
+3. 隐式声明：未显式的声明serialVersionUID时java序列化机制会根据Class自动生成一个serialVersionUID（最好不要这样，因为如果Class发生变化，自动生成的serialVersionUID可能会随之发生变化，导致匹配不上）
+
+> 序列化类增加属性时，最好不要修改serialVersionUID，避免反序列化失败
+
+参考资料：[一文搞懂序列化与反序列化](https://zhuanlan.zhihu.com/p/316200445)
+
+
+# 14 Dubbo和SpringCloud核心组件Feign、Ribbin、Hystrix对比
+
+## 14.1 协议
+
+Dubbo：支持多传输协议：Dubbo、Rmi、http，可灵活配置。
+
+Feign：基于http传输协议，短连接，性能比Dubbo低。
+
+## 14.2 与SpringCloud集成
+
+Dubbo：在早期Dubbo是与Spring Cloud 集成有一些脱落,但是在Spring Cloud Alibaba 出现后，spring-cloud-starter-dubbo 与Spring Cloud完美集成
+
+Feign：Spring Cloud 最早支持的RPC框架，兼容性好
+
+## 14.3 负载均衡
+
+Dubbo内置了如下负载均衡算法，用户可直接配置使用：
+
+
+| 算法                        | 特性                  | 备注                                         |
+| --------------------------- | --------------------- | -------------------------------------------- |
+| RandomLandBalance           | 加权随机              | 默认算法，默认权重相同                       |
+| RoundRobinLoadBalance       | 加权轮询              | 借鉴与Nginx的平滑加权轮询算法，默认权重相同  |
+| LeastActiveLoadBalance      | 最少活跃优先+加权随机 | 背后是能者多劳的思想                         |
+| ShortestResponseLoadBalance | 最短响应优先+加权随机 | 更加关注响应速度                             |
+| ConsistentHashLoadBalance   | 一致性Hash            | 确定的入参，确定的提供者，适用于有状态的请求 |
+
+同时支持服务端负载均衡和客户端负载均衡配置，灵活度非常高
+
+Fegin自身是没有负载均衡能力的，之前默认使用Ribbon作为负载均衡的组件，但是Netfix已经不再维护。新版本的Spring Cloud已经将Ribbon替换成Spring Cloud Load Balancer,Ribbon是客户端级别的负载均衡，不像dubbo支持客户端和服务端双向配置
+
+
+## 14.4 容错机制
+
+### Dubbo支持多种容错策略：
+
+1. Failover Cluste：失败自动切换，当出现失败，重试其它服务器。通常用于读操作，但重试会带来更长延迟。可通过 retries="2" 来设置重试次数(不含第一次)。默认容错机制
+2. Failfast Cluster：快速失败，只发起一次调用，失败立即报错。通常用于非幂等性的写操作，比如新增记录。
+3. Failsafe Cluster：失败安全，出现异常时，直接忽略。通常用于写入审计日志等操作。
+4. Failback Cluster ：失败自动恢复，后台记录失败请求，定时重发。通常用于消息通知操作。
+5. Forking Cluster：并行调用多个服务器，只要一个成功即返回。通常用于实时性要求较高的读操作，但需要浪费更多服务资源。可通过 forks="2" 来设置最大并行数。
+6. Broadcast Cluster：广播调用所有提供者，逐个调用，任意一台报错则报错。通常用于通知所有提供者更新缓存或日志等本地资源信息。
+
+### Feign
+
+Feign默认使用Netfix Hystrix作为服务熔断的组件。Hystix提供了服务降级，服务熔断，依赖隔离，监控（Hystrix Dashboard）等功能。
+目前 Hystrix 已经处于维护（maintenance）状态，不再继续开发，这个消息是Netfix 在2018年对外宣布的。Hystrix GitHub页面上也说明了该项目目前处于维护模式
+
+> 在使用dubbo后续的熔断降级也还可以使用Alibaba Sentinel
+
+## 14.5 迁移
+
+### Dubbo
+dubbo为了提供对RestTemplate和OpenFeign客户端端的支持，在Dubbo Spring Cloud提供了@DubboTransported注解，使客户端无需额外处理即可兼容RestTemplate和OpenFeign的调用，换而言之在不调整 Feign 接口以及 RestTemplate URL 的前提下，可以实现无缝迁移
+比如在客户端使用OpenFeign调用duboo服务，只需要添加如下注解如下
+
+```java
+@FeignClient("order")
+@DubboTransported(protocol = "dubbo")
+```
+
+使用RestTemplate或OpenFeign调用Dubbo服务会经历以下过程：
+
+1. 根据服务名得到注册中心的Dubbo服务DubboMetadataService。
+2. 使用DubboMetadataService里提供的getServiceRestMetadata方法获取要使用的Dubbo服务和对应的Rest元数据。
+3. 基于Dubbo服务和Rest元数据构造GenericService。
+4. 服务调用过程中使用GenericService发起泛化调用。
+
+### Feign
+
+没有提供对dubbo无缝迁移的支持
+
+参考资料：[Spring Cloud RPC(Feign VS Dubbo)多维度对比选型](https://juejin.cn/post/7042686801877663752)
+
+
+# 15 线程的创建方式
+
+## 15.1 继承Thread类
+
+```java
+public class App {
+   
+    public static void main(String[] args){
+        new ThreadObject().start();
+    }
+    
+    static class ThreadObject extends Thread {
+        @Override
+        public void run() {
+            System.out.println("current thread name is :" + Thread.currentThread().getName());
+        }
+    }
+}
+```
+
+## 15.2 实现Runnable接口
+
+```java
+public class App {
+   
+    public static void main(String[] args){
+        Thread thread = new Thread(new RunnableObject());
+        thread.start();
+    }
+    
+    static class RunnableObject implements Runnable {
+        @Override
+        public void run() {
+            System.out.println("current thread name is :" + Thread.currentThread().getName());
+        }
+    }
+}
+```
+
+## 15.3 实现Callable接口
+
+```java
+public class App {
+    public static void main(String[] args) {
+        //执行Callable方式，需要FutureTask实现，用于接收运算结果
+        FutureTask<Integer> futureTask = new FutureTask<Integer>(new CallableObject());
+        new Thread(futureTask).start();
+        try {
+            // 获取线程执行完毕后的返回值
+            Integer sum = futureTask.get();
+            System.out.println("sum is :" + sum);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } catch (ExecutionException e) {
+            e.printStackTrace();
+        }
+    }
+    // Callable泛型定义返回值的类型
+    static class CallableObject implements Callable<Integer> {
+        public Integer call() throws Exception {
+            Integer sum = 0;
+            for (int i = 0; i < 10; i++) {
+                sum += i;
+            }
+            return sum;
+        }
+    }
+}
+```
+
+## 15.4 基于线程池创建
+
+```java
+public class App {
+
+    public static void main(String[] args) {
+        //创建线程池
+        ExecutorService threadPool = Executors.newFixedThreadPool(10);
+        for(int i = 0 ; i < 10 ; i++) {
+            //调用execute()方法创建线程
+            //采用匿名内部类的方法，创建Runnable对象，并重写run()方法
+            threadPool.execute(new Runnable() {
+                public void run() {
+                    System.out.println(Thread.currentThread().getName());
+                }
+            });
+        }
+        // 关闭线程池
+        threadPool.shutdown();
+    }
+}
+```
+
+
+
 
 
 ---
