补充青铜时代和白银时代

--- a/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
+++ b/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
@@ -151,6 +151,10 @@ IoC 是 Inversion of Control 的简写，译为“控制反转”，它不是一
 
 参考资料：[Spring IoC（控制反转）](http://c.biancheng.net/spring/inversion-control.html)
 
+## 4.2 AOP 面向切面编程
+
+AOP保证在不修改源代码的前提下，去为系统中的业务组件添加某种通用功能。
+
 
 # 5 在实际工作中怎样对SQL进行调优
 
@@ -169,7 +173,7 @@ IoC 是 Inversion of Control 的简写，译为“控制反转”，它不是一
 - NOT IN、 NOT EXISTS这两种用法都不走索引，但是IN还是走索引的；
 - IS NULL不走索引，IS NOT NULL走索引。
 
-> 在设计字段时，如果字段没有要求没没有值的情况下一定要设置为NULL，那么建议设置为空字符串。
+> 在设计字段时，如果字段没有要求‘没有值的情况下一定要设置为NULL’，那么建议设置为空字符串。
 
 ## 5.2 SELECT检查
 
@@ -375,13 +379,13 @@ unchecked exception 指的是不用在源代码里处理，为运行时异常。
 
 Java的线程是不允许启动两次的，第二次调用必然会抛岀`IllegalThreadStateEXception`，这是一种运行时异常，多次调用 start 被认为是编程错误。
 
-## 10.2 线程的生命周期
+## 10.2 线程的生命周期（线程状态）
 
 - 新建（NEW），表示线程被创建出来还没真正启动的状态，可以认为它是个Java内部状态。
 - 就绪（ RUNNABLE），表示该线程已经在WM中执行，当然由于执行需要计算资源，它可能是正在运行，也可能还在等待系统分配给它cpu片段，在就绪队列里面排队。
 - 运行（Running）在其他一些分析中，会额外区分一种状态 RUNNING，但是从 Java API的角度，并不能表示出来。
 - 阻塞（ BLOCKED），这个状态和我们前面两讲介绍的同步非常相关，阻塞表示线程在等待 Monitor lock。比如，线程试图通过synchronized去获取某个锁，但是其他线程已经独占了，那么当前线程就会处于阻塞状态。
-- 等待（ WAITING），表示正在等待其他线程釆取某些操作。一个常见的场景是类似生产者消费者模式，发现任务条件尚未满足，就让当前消费者线程等待（wait），另外的生产者线程去准备任务数据，然后通过类似 notify等动作，通知消费线程可以继续工作了。Thread join（也会令线程进入等待状态。
+- 等待（ WAITING），表示正在等待其他线程釆取某些操作。一个常见的场景是类似生产者消费者模式，发现任务条件尚未满足，就让当前消费者线程等待（wait），另外的生产者线程去准备任务数据，然后通过类似 notify等动作，通知消费线程可以继续工作了。
 - 计时等待（ TIMED_WAIT），其进入条件和等待状态类似，但是调用的是存在超时条件的方法，比如wait或join等方法的指定超时版本，如下面示例
 
 ```java
@@ -389,6 +393,8 @@ public final native void wait（long timeout） throws InterruptedException；
 ```
 
 - 终止（ TERMINATED），不管是意外退出还是正常执行结束，线程已经完成使命，终止运行，也有人把这个状态叫作死亡在第二次调用 start()方法的时候，线程可能处于终止或者其他（非NEW）状态，但是不论如何，都是不可以再次启动的。
+
+{% asset_img thread_status.png %}
 
 参考资料：[https://cloud.tencent.com/developer/article/1625433](https://cloud.tencent.com/developer/article/1625433)
 
