--- a/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
+++ b/source/_posts/2023-03-14-程序猿三部曲之青铜时代.md
@@ -659,7 +659,41 @@ public class App {
 ```
 
 
+# 16.HashSet和LinkedHashSet的区别
 
+HashSet和LinkedHashSet都是Java集合框架中的Set接口的实现类，它们主要区别在于维护元素的顺序方式不同。
+
+HashSet是基于哈希表实现的，它不保证元素的顺序，因此它的迭代顺序是不确定的。HashSet的优点是它的插入和查询操作的时间复杂度都是O(1)，因此它适用于需要快速查找元素的场景。
+
+LinkedHashSet是基于哈希表和链表实现的，它维护了元素的插入顺序，因此它的迭代顺序是按照元素插入的顺序进行的。
+
+LinkedHashSet的优点是它在保证快速查找元素的同时，还能保证元素的顺序，因此它适用于需要按照插入顺序遍历元素的场景。
+
+
+# 17.基本数据类型和引用数据类型的区别
+
+{% asset_img base_data_type.png %}
+
+特点：
+
+一、从概念方面来说
+
+基本数据类型:变量名指向具体的数值
+引用数据类型:变量名指向存数据对象的内存地址,即变量名指向hash值
+
+二、从内存构建方面来说
+
+基本数据类型:变量在声明之后java就会立刻分配给他内存空间
+
+引用数据类型:它以特殊的方式(类似C指针)指向对象实体（具体的值），这类变量声明时不会分配内存，只是存储了一个内存地址。
+
+三、从使用方面来说
+
+基本数据类型:使用时需要赋具体值,判断时使用“==”号
+
+引用数据类型:使用时可以赋null,判断时使用equals方法
+
+来源[https://www.cnblogs.com/sunli0205/p/5226716.html](https://www.cnblogs.com/sunli0205/p/5226716.html)
 
 
 ---
