'增加minio文件服务器后续文章'

--- a/source/_posts/2024-10-26-Minio文件服务器：安装.md
+++ b/source/_posts/2024-10-26-Minio文件服务器：安装.md
@@ -3,7 +3,9 @@ title: Minio文件服务器：安装
 toc: true
 date: 2024-10-26 18:48:29
 tags:
+  - mini
 categories:
+  - 文件服务器
 ---
 
 
@@ -24,7 +26,7 @@ categories:
 并为 minio 应用程序和配置文件创建一些文件夹
 
 ```linux
-[centos@server~]# mkdir -p /opt/minio/bin
+# mkdir -p /opt/minio/bin
 ```
 
 ![](https://img.picgo.net/2024/10/26/_2024102616071144a7aa8997205fae.jpeg)
