补充minio文件服务器的内容

--- a/source/_posts/2024-10-26-Minio文件服务器：安装.md
+++ b/source/_posts/2024-10-26-Minio文件服务器：安装.md
@@ -146,3 +146,23 @@ WantedBy=multi-user.target
 并且设置访问权限为`public`
 
 ![](https://img.picgo.net/2024/10/26/_20241026165405a242600d198385d7.jpeg)
+
+
+## 2024年10月28日 补充：
+
+`/opt/minio/minio.conf`的配置中，设置了`MINIO_OPTS="--address:9100" `，代表MinIO服务的监听端口和Minio服务UI界面的访问端口都是`9100`，需要注意的是，当在浏览器输入`localhost:9100`访问Minio服务的UI界面时，Minio服务会通知浏览器重定向到`localhost:45750`(重定向后的端口号不固定，可能之后的访问会重定向到`45755`、或者其他端口号)。
+
+![](https://img.picgo.net/2024/10/28/_202410281258444ae432a47c278dbd.jpeg)
+
+所以可以更改一下`/opt/minio/minio.conf`的配置，分别设置Minio服务的监听端口和Minio服务UI界面的访问端口.
+
+```
+MINIO_VOLUMES="/var/www/minio_storage/" 
+MINIO_OPTS="--address:9100 --console-address:43755" 
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_KEY=admin123
+```
+
+重启minio应用，再次访问`localhost:9100`，浏览器会固定重定向到`localhost:43755`，并且之后不管什么时候再次访问，重定向后端的端口一直会是`43755`
+
+![](https://img.picgo.net/2024/10/28/_2024102813102977d819dd54719606.jpeg)
